--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
-  margin: 0;
+  margin: 70px;
   padding: 0;
+  background: #ccc
 }
 
 button {
@@ -13,3 +14,9 @@ button {
     display: inline-block;
     font-size: 16px;
 }
+
+h1, p, div {
+
+    font-family: "Arial", Arial, sans-serif;
+}
+
