--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 html, body {
   margin: 70px;
   padding: 0;
-  background: #ccc
 }
 
 button {
     background-color: #000;
+  	width: 200px;
+  height: 100px;
     border: 10;
     color: white;
     padding: 15px 32px;
@@ -20,3 +21,7 @@ h1, p, div {
     font-family: "Arial", Arial, sans-serif;
 }
 
+p, div {
+ font-size: 24px; 
+  padding: 20px;
+}
